fix: position absolute  to thermometer page to prevent overlap

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -805,7 +805,9 @@ body {
   }
 }
 #thermometer {
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
   z-index: 10;
   overflow: hidden;
   font-family: "Inknut Antiqua", serif;
